
#### CrossApp 1.3.0 Beta2 更新内容：

#####1.优化引擎渲染误差问题

#####2.优化文字默认间距

#####3.优化CATextField

#####4.优化CATextView

#####5.优化在iOS9.x系统，数字英文与汉字对齐的问题

#####6.临时删除UI编辑器windows版本，在1.3.0正式版会重新发布。

#####7.其他大量的细节优化

**********************************************************************************

#### CrossApp 1.3.0 Beta 更新内容：

#####1.新增UI编辑器
在引擎根目录，支持mac、windows平台

#####2.重构CATextField
接口有改动，代理有改动，升级着参考官网文档，体验完爆老旧的CATextField

#####3.重构CATextView
接口有改动，代理有改动，升级着参考官网文档，体验完爆老旧的CATextView
目前仅实现iOS与android。

#####4.新增瀑布流控件CAWaterfallView

#####5.重构CASegmentedControl

#####6.修复抽屉管理器CADrawerController偶尔触摸失灵bug

#####7.其他大量的细节优化

**********************************************************************************

#### CrossApp 1.2.0 更新内容：  

#####1.修复win32编译sqlte3报错的问题

#####2.修复andrpoid平台CATextField无法正确显示Emoji表情的bug

#####3.修复CADrawerController某些情况触摸锁死的的bug

#####4.其他一些细节的优化与调整

**********************************************************************************

#### CrossApp 1.2.0 Beta2 更新内容：  

#####1.修复win32编译报错的问题

#####2.修复android编译报错的问题

#####3.修复iOS默认无法适配iphone6 puls的问题

#####4.修复win32关闭程序报错的问题

**********************************************************************************

#### CrossApp 1.2.0 Beta 更新内容：  

#####1.简化适配概念
1.删除CCRect、CCPoint、CCSize、CADipRect、CADipPoint、CADipSize
2.增加新的DRect、DPoint、DSize，以dp为单位。(在PPI为320的设备上，1px=1dp)

#####2.支持C++11

#####3.新增视频播放器
1.CAVideoPlayerView
2.CAVideoPlayerControlView

#####4.支持Emoji字体
1.CALabel支持显示系统默认Emoji字体
2.CATextField支持输入系统键盘Emoji表情
2.CATextView支持输入系统键盘Emoji表情

#####5.优化文字系统
兼容iOS9系统字体PingFang.ttc

#####6.删除CCActions系统
请使用CAViewAnimation系统

#####7.删除CCArray、CCDictionary
请使用CAVector、CADeque、CAList、CAMap

#####8.删除CCString
请使用std::string

#####9.优化PC模拟器
将之前PC端模拟器与系统像素比1：1改为2：1，以满足小屏幕有足够空间显示模拟器

#####10.部分控件增加PC模式
例如，CAScrollView在PC端可开启PC模式，以支持PC操作方式

#####11.iOS版本兼容修改
新版放弃支持iOS6.0+，最低版本提升到iOS7.0

#####12.新增Test-HD
平板模式的test

#####13.其他一些细节的优化

