@@ -1,4 +1,12 @@
 
+#### CrossApp 1.3.0 正式版 更新内容：
+
+#####1.大量的细节优化，以及bug的修复
+
+#####2.windows版UI编辑器重新上架
+
+**********************************************************************************
+
 #### CrossApp 1.3.0 Beta2 更新内容：
 
 #####1.优化引擎渲染误差问题
